feat category menu
